--- a/gyftos.html/style.css
+++ b/gyftos.html/style.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapics.com/css2? family=Nunito:wght@400;500;600;700;800;900&display=swap');
 
+body
+{
+    width:1920px;
+    background-color: #f8e0b3;
+    height:1080px;
+}
+
+@media screen and (min-width: 500px) {
+   body {
+      width:420px;
+   }
+}
+
+@media screen and (min-width: 800px) {
+   body {
+      width:720px;
+   }
+}
+
 *{
    padding: 0;
    margin: 0;
